[gd_scene load_steps=15 format=3 uid="uid://wctwfg6frquw"]

[ext_resource type="Script" path="res://Code/EndArea.gd" id="1_mdjur"]
[ext_resource type="Texture2D" uid="uid://ca1mslcb8pyjk" path="res://Assets/CleptoHatch.png" id="2_po51d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pvd5h"]
radius = 43.0465

[sub_resource type="AtlasTexture" id="AtlasTexture_goa5e"]
atlas = ExtResource("2_po51d")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnyhp"]
atlas = ExtResource("2_po51d")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4fj1"]
atlas = ExtResource("2_po51d")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7nhv"]
atlas = ExtResource("2_po51d")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f2qm"]
atlas = ExtResource("2_po51d")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r2wn"]
atlas = ExtResource("2_po51d")
region = Rect2(240, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uapev"]
atlas = ExtResource("2_po51d")
region = Rect2(288, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2605g"]
atlas = ExtResource("2_po51d")
region = Rect2(336, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6so87"]
atlas = ExtResource("2_po51d")
region = Rect2(384, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_702um"]
atlas = ExtResource("2_po51d")
region = Rect2(0, 0, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fnw6o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_goa5e")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_jnyhp")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_q4fj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7nhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f2qm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r2wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uapev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2605g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6so87")
}],
"loop": false,
"name": &"close",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_702um")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}]

[node name="EndArea" type="Area2D"]
collision_layer = 4
script = ExtResource("1_mdjur")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 124)
scale = Vector2(1.32995, 1.19505)
shape = SubResource("CircleShape2D_pvd5h")
debug_color = Color(0.376471, 0.615686, 0, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.543897, 0.554232)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_fnw6o")
animation = &"close"

[node name="EndTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="EndTimer" to="." method="_on_end_timer_timeout"]
